<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/menu_gallery"
            android:visible="true" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/menu2">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_wifi_black_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
